# XNAT-Maintenance-Monitoring-scripts

./: .gitignore  Dockerfile  LICENSE  README.md  build-and-push.sh  entrypoint.py  pyproject.toml  requirements.txt  run.sh  sonar-project.properties
scripts/: disk_usages.py  users_per_project.py
