[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xnat-maintenance-monitoring-scripts"
dynamic = ["version"]
description = "XNAT maintenance & monitoring scripts."
keywords = ["xnat"]
requires-python = ">= 3.9"
authors = [
  { name = "Alexander Harms", email = "alexander.harms@health-ri.nl" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "xnat == 0.7.0",
  "pandas == 2.2.3"
]

readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Documentation = "https://github.com/Health-RI/XNAT-Maintenance-Monitoring-scripts/"
Repository = "https://github.com/Health-RI/XNAT-Maintenance-Monitoring-scripts.git"
Issues = "https://github.com/Health-RI/XNAT-Maintenance-Monitoring-scripts/issues"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-cov"]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report", "coverage xml"]
cov = ["test-cov", "cov-report"]

[tool.coverage.run]
source_pkgs = ["scripts", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
sempyro = ["scripts"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
